# mogship-builds-calculator

./: README.md  pyproject.toml
app/: main.py  pyproject.toml
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: builds.py
app/core/: config.py  es.py
